--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "express": "^4.16.3",
     "http-server": "~0.11.1",
     "request": "^2.85.0"
+  },
+  "repository":{
+    "type": "git",
+    "url": "https://github.com/jfcabaluna24/point-productions.git"
   }
 }
