--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "repository":{
     "type": "git",
-    "url": "https://github.com/jfcabaluna24/point-productions.git"
+    "url": "https://github.com/jfcabaluna24/point-productions"
   }
 }
